# Metal-Quake

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GEMINI.md  PROGRESS.md  README.md  TECHNICAL.md  build.sh  download_metal_cpp.sh  test.c  test.i  test_byte.c  test_cvar.c  test_new.c
MQ_Denoiser.mlmodelc/: metadata.json  model.espresso.net  model.espresso.shape  model.espresso.weights
MQ_RealESRGAN.mlmodelc/: metadata.json  model.espresso.net  model.espresso.shape  model.espresso.weights
Quake/: cd_macos.m  cl_parse.c  client.h  d_edge.c  d_surf.c  gl_draw.c  glquake.h  host.c  host_cmd.c  in_macos.m  in_null.c  mathlib.c  menu.c  net.h  net_ser.c  pr_cmds.c  qcommon.c  qcommon.h  quakedef.h  quakedef_part0.h  quakedef_user.h  r_draw.c  r_main.c  r_misc.c  r_shared.h  sbar.c  server.h  snd_dma.c  snd_mem.c  sys_macos.m  vid.h  zone.c
WinQuake/: cl_input.c  host.c  in_macos.m  mathlib.c  menu.c  model.h  net_udp.c  pr_exec.c  progs.h  qcommon.c  qcommon.h  quakedef.h  quakedef_part0.h  quakedef_part1.h  r_edge.c  r_shared.h  render.h  snd_macos.m  snd_mix.c  sv_main.c  sv_phys.c  sys_macos.m  temp_check.c  vid_metal.m  wad.h  world.h
id1/: config.cfg
scripts/: create_coreml_models.py
src/core/: cl_parse.c  cl_tent.c  console.c  d_iface.h  draw.c  draw.h  host.c  host_cmd.c  mathlib.c  mathlib.h  net_dgrm.c  pr_cmds.c  pr_edict.c  quakedef.h  quakedef_part0.h  quakedef_part2.h  r_part.c  screen.c  snd_dma.c  snd_mix.c  sv_move.c  view.c
src/macos/: GCD_Tasks.h  GCD_Tasks.m  MQ_CoreML.m  MQ_Ecosystem.m  MQ_FrameInterp.m  MQ_LiquidGlass.metal  MQ_MeshShaders.metal  MQ_PHASE_Audio.m  MQ_Residency.m  MetalQuakeBridge.h  MetalQuakeBridge.m  MetalQuakeLauncher.swift  Metal_Renderer_Main.cpp  Metal_Settings.h  Sys_Tahoe_Input.mm  in_gamecontroller.mm  net_apple.cpp  rt_shader.metal  snd_coreaudio.cpp  snd_coreaudio.hpp  sys_macos.m  vid_metal.cpp  vid_metal.hpp
tests/: README.md  run.sh  test_addr.cpp  test_settings.cpp
